linux adaptation